--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,8 @@ dependencies:
   flutter_widget_from_html_core: ^0.15.1
   animations: ^2.0.11
   url_launcher: ^6.3.0
+  provider: ^6.1.2
+  pbp_django_auth: ^0.4.0
 
 dev_dependencies:
   flutter_test:
