--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dev_dependencies:
     sdk: flutter
 
   flutter_lints: ^5.0.0
+  flutter_launcher_icons: ^0.13.1 
 
 flutter:
   uses-material-design: true
@@ -61,3 +62,12 @@ flutter:
           weight: 700
         - asset: assets/fonts/grandis_extended/GrandisExtended-Black.ttf
           weight: 900
+
+flutter_launcher_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/images/login_dark.png"  # Path to your icon image
+  min_sdk_android: 21 # Android min sdk min:16, default 21
+  # Optional configurations:
+  # adaptive_icon_background: "#ffffff" # only for Android 8.0 devices and above
+  # adaptive_icon_foreground: "assets/icon/foreground.png" # only for Android 8.0 devices and above
